--- a/localisation/braz_por/MD_focus_USA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_USA_l_braz_por.yml
@@ -3154,3 +3154,18 @@
  USA_cuba_non_terrorist: "Remover Cuba da lista de Estados terroristas"
  USA_open_borders: "Abrir Fronteiras"
  USA_end_blockade: "Terminar o Bloqueio"
+ USA_events_domestic_policies.20.title1: "O último dos gigantes"
+ USA_events_domestic_policies.20.title2: "O último gigante"
+ USA_events_domestic_policies.20.title3: "Behemoths do Passado"
+ USA_events_domestic_policies.20.d: "Os navios de guerra da classe Iowa serviram-nos fielmente durante quase 60 anos, desde Okinawa e a Guerra da Coreia até à Guerra do Golfo. No entanto, com a queda da URSS e os custos crescentes de manutenção destes navios em serviço, o Congresso está a tornar-se mais insistente em aposentar os dois últimos Iowa. Alguns veteranos já propõem transformá-los em museus flutuantes. Embora pudéssemos ignorar o Congresso e garantir financiamento para manter estes dois navios activos, isso colocar-nos-ia em desacordo com eles. Também poderíamos dar um passo adiante, trazendo Nova Jersey e Missouri de volta ao serviço. Mas tal decisão provocaria sem dúvida a ira tanto do Congresso como do Senado."
+ USA_events_domestic_policies.20.d2: "O restante navio de guerra da classe Iowa serviu-nos fielmente durante quase 60 anos, desde Okinawa e a Guerra da Coreia até à Guerra do Golfo. No entanto, com a queda da URSS e os custos crescentes de manter este navio em serviço, o Congresso está a tornar-se mais insistente em aposentar o último navio do Iowa. Alguns veteranos já propõem transformá-lo num museu flutuante. Embora pudéssemos ignorar o Congresso e garantir financiamento para manter os navios activos, isso colocar-nos-ia em desacordo com eles. Também poderíamos dar um passo adiante, trazendo de volta ao serviço o New Jersey e o Missouri. Mas tal decisão provocaria sem dúvida a ira tanto do Congresso como do Senado."
+ USA_events_domestic_policies.20.d3: "Os navios de guerra de Iowa, que serviram fielmente durante quase 60 anos – desde Okinawa e a Guerra da Coreia até à Guerra do Golfo – foram recentemente desmantelados e transformados em exposições de museu. No entanto, estes gigantes do passado têm recentemente atraído multidões crescentes, à medida que mais pessoas visitam os museus e aprendem sobre a sua história com admiração."
+ USA_events_domestic_policies.20.a: "Aposente os Iowas e transforme-os em navios-museu"
+ USA_events_domestic_policies.20.a1: "Aposente o último Iowa e transforme-o em um navio-museu"
+ USA_events_domestic_policies.20.b: "Garantir o financiamento para manter os dois Iowa restantes em serviço"
+ USA_events_domestic_policies.20.b1: "Garantir o financiamento para manter o último Iowa restante em serviço"
+ USA_events_domestic_policies.20.c: "Congresso que se dane! Garanta o financiamento para trazer de volta todos os navios de guerra de Iowa!"
+ USA_events_domestic_policies.20.d1: "Um novo lar para os navios de guerra de Iowa"
+ USA_recomission_ships_TT: "§GRecomissões§! os seguintes §HEncouraçados§!:\n- §CUSS Nova Jersey§!\n- §CUSS Missouri§!\n§BPorto: São Francisco§!"
+ USA_delete_iowa_class_TT: "§RDesativação§! uma §HAula de Iowa§!! Encouraçado"
+ USA_keep_iowa_class_TT: "Continuaremos a §HManter§! qualquer §HIowa Class restante§! Encouraçado"
