--- a/localisation/braz_por/equipment_l_braz_por.yml
+++ b/localisation/braz_por/equipment_l_braz_por.yml
@@ -931,7 +931,7 @@
  BUL_infantry_weapons5: "SCAR-H"
  BUL_IFV_3: "BMP-23"
  CAN_infantry_weapons:0 "C1A1"
- CAN_infantry_weapons_0_desc: "The L1A1 Self-Loading Rifle, also known as the SLR (Self-Loading Rifle), or by the Canadian Army designation C1A1, is a British version of the FN FAL battle rifle produced by the Belgian armaments manufacturer FN Herstal. The C1A1 was produced under licence in Canada starting in 1954."
+ CAN_infantry_weapons_0_desc: "O rifle de carregamento automático L1A1, também conhecido como SLR (rifle de carregamento automático), ou pela designação do Exército canadense C1A1, é uma versão britânica do rifle de batalha FN FAL produzido pelo fabricante de armamentos belga FN Herstal. O C1A1 foi produzido sob licença no Canadá a partir de 1954."
  CAN_infantry_weapons1:0 "C1A2"
  CAN_infantry_weapons_1_desc: "The C1A2 was a major modification by Canadian Arsenals Limited to the C1A1. It involved several items with the purpose of increasing the reliability and field repairability of the rifles."
  CAN_infantry_weapons2:0 "C7"
@@ -1988,7 +1988,7 @@
  ENG_infantry_weapons: "L1A1 SLR"
  ENG_infantry_weapons1: "L1A1 SLR SUIT"
  ENG_infantry_weapons2: "L85A1"
- ENG_infantry_weapons3: "L85A2 Early"
+ ENG_infantry_weapons3: "L85A2 cedo"
  ENG_infantry_weapons4: "L85A2"
  ENG_infantry_weapons5: "L85A3"
  ENG_infantry_weapons6: "L403A1"
