--- a/localisation/polish/MD_focus_USA_l_polish.yml
+++ b/localisation/polish/MD_focus_USA_l_polish.yml
@@ -3154,3 +3154,18 @@
  USA_cuba_non_terrorist: "Usuń Kubę z listy państw terrorystycznych"
  USA_open_borders: "Otwarte granice"
  USA_end_blockade: "Zakończ blokadę"
+ USA_events_domestic_policies.20.title1: "Ostatni z Behemotów"
+ USA_events_domestic_policies.20.title2: "Ostatni Behemot"
+ USA_events_domestic_policies.20.title3: "Behemoty przeszłości"
+ USA_events_domestic_policies.20.d: "Pancerniki klasy Iowa służyły nam wiernie przez prawie 60 lat, od Okinawy i wojny koreańskiej po wojnę w Zatoce Perskiej. Jednakże wraz z upadkiem ZSRR i rosnącymi kosztami utrzymania tych statków w służbie Kongres coraz bardziej nalega na wycofanie z eksploatacji dwóch ostatnich statków Iowa. Niektórzy weterani już proponują przekształcenie ich w pływające muzea. Chociaż moglibyśmy uchylić Kongres i zapewnić fundusze na utrzymanie tych dwóch statków w działaniu, postawiłoby nas to w sprzeczności z nimi. Moglibyśmy również pójść o krok dalej i przywrócić do użytku stany New Jersey i Missouri. Ale taka decyzja niewątpliwie wywołałaby gniew zarówno Kongresu, jak i Senatu."
+ USA_events_domestic_policies.20.d2: "Pozostały pancernik klasy Iowa służył nam wiernie przez prawie 60 lat, od Okinawy i wojny koreańskiej po wojnę w Zatoce Perskiej. Jednak wraz z upadkiem ZSRR i rosnącymi kosztami utrzymania tego statku w służbie Kongres coraz bardziej nalega na wycofanie ostatniego statku ze stanu Iowa. Niektórzy weterani już proponują przekształcenie go w pływające muzeum. Chociaż moglibyśmy uchylić Kongres i zapewnić fundusze na utrzymanie statków w ruchu, postawiłoby nas to w sprzeczności z nimi. Moglibyśmy także pójść o krok dalej i przywrócić do użytku stany New Jersey i Missouri. Ale taka decyzja niewątpliwie wywołałaby gniew zarówno Kongresu, jak i Senatu."
+ USA_events_domestic_policies.20.d3: "Pancerniki Iowa, które służyły wiernie przez prawie 60 lat – od Okinawy i wojny koreańskiej po wojnę w Zatoce Perskiej – zostały niedawno wycofane ze służby i zamienione w eksponaty muzealne. Jednak ci giganci z przeszłości przyciągają ostatnio coraz większe tłumy, ponieważ coraz więcej osób odwiedza muzea i z podziwem poznaje ich bogatą historię."
+ USA_events_domestic_policies.20.a: "Wycofaj statki Iowa i przekształć je w statki-muzea"
+ USA_events_domestic_policies.20.a1: "Wycofaj ostatnią Iowa i przekształć ją w statek-muzeum"
+ USA_events_domestic_policies.20.b: "Zabezpiecz fundusze, aby utrzymać w służbie dwa pozostałe statki Iowa"
+ USA_events_domestic_policies.20.b1: "Zabezpiecz fundusze, aby utrzymać w służbie ostatnią pozostałą Iowa"
+ USA_events_domestic_policies.20.c: "Kongres do cholery! Zapewnij fundusze na przywrócenie wszystkich pancerników Iowa!"
+ USA_events_domestic_policies.20.d1: "Nowy dom dla pancerników z Iowa"
+ USA_recomission_ships_TT: "§GReprowizje§! następujące §HBattleships§!:\n- §CUSS New Jersey§!\n- §CUSS Missouri§!\n§BPort: San Francisco§!"
+ USA_delete_iowa_class_TT: "Czy§RWycofanie§! §HKlasa Iowa§!! Okręt wojenny"
+ USA_keep_iowa_class_TT: "Będzie nadal §HMaintain§! jakakolwiek pozostała §HKlasa Iowa§! Okręt wojenny"
