--- a/localisation/polish/equipment_l_polish.yml
+++ b/localisation/polish/equipment_l_polish.yml
@@ -2841,7 +2841,7 @@
  PER_infantry_weapons4: "KH-2002"
  PER_infantry_weapons5: "Masaf 1"
  PER_infantry_weapons6: "Fajr-41"
- PER_infantry_weapons7: "Arash"
+ PER_infantry_weapons7: "Wysypka"
  PER_APC_1: "M-113"
  PER_APC_2: "Kobra BMT-2"
  PER_APC_2_short: "Kobra BMT-2"
