--- a/localisation/russian/MD_focus_USA_l_russian.yml
+++ b/localisation/russian/MD_focus_USA_l_russian.yml
@@ -3154,3 +3154,18 @@
  USA_iraq_war_cost: "The Iraq War"
  USA_iraq_war_cost_desc: "The Iraq War has rocked with relative failure. Our efforts to continue the war will now cost us a considerable amount of money for some time, as we must scrap together money for the equipment and manpower required."
  USA_iraq_war_cost_TT: "§R$2.000§! §YBillion§! contributed weekly to the §YIraq War§!.\n"
+ USA_events_domestic_policies.20.title1: "Последний из бегемотов"
+ USA_events_domestic_policies.20.title2: "Последний Бегемот"
+ USA_events_domestic_policies.20.title3: "Бегемоты прошлого"
+ USA_events_domestic_policies.20.d: "Линкоры класса «Айова» служили нам верой и правдой почти 60 лет, от Окинавы и войны в Корее до войны в Персидском заливе. Однако с распадом СССР и ростом затрат на содержание этих кораблей в строю Конгресс становится всё более настойчивым в выводе из эксплуатации двух последних «Айов». Некоторые ветераны уже предлагают превратить их в плавучие музеи. Хотя мы могли бы отменить решение Конгресса и обеспечить финансирование для поддержания активности этих двух кораблей, это поставило бы нас в противоречие с ними. Мы также могли бы пойти еще дальше, вернув в строй Нью-Джерси и Миссури. Но такое решение, несомненно, вызовет гнев как Конгресса, так и Сената."
+ USA_events_domestic_policies.20.d2: "Оставшийся линкор класса «Айова» служил нам верой и правдой почти 60 лет, от Окинавы и войны в Корее до войны в Персидском заливе. Однако с распадом СССР и ростом затрат на содержание этого корабля в эксплуатации Конгресс становится все более настойчивым в выводе из эксплуатации последнего корабля «Айова». Некоторые ветераны уже предлагают превратить его в плавучий музей. Хотя мы могли бы отменить решение Конгресса и обеспечить финансирование для поддержания работоспособности кораблей, это поставило бы нас в противоречие с ними. Мы также могли бы пойти еще дальше, вернув в эксплуатацию «Нью-Джерси» и «Миссури». Но такое решение, несомненно, вызовет гнев как Конгресса, так и Сената."
+ USA_events_domestic_policies.20.d3: "Линкоры «Айова», прослужившие верой и правдой почти 60 лет — от Окинавы и Корейской войны до войны в Персидском заливе — недавно были выведены из эксплуатации и превращены в музейные экспонаты. Однако эти гиганты прошлого в последнее время привлекают все больше людей, поскольку все больше людей посещают музеи и с трепетом узнают об их легендарной истории."
+ USA_events_domestic_policies.20.a: "Сдать «Айовы» в отставку и превратить их в корабли-музеи"
+ USA_events_domestic_policies.20.a1: "Снять последнюю «Айову» и превратить ее в корабль-музей."
+ USA_events_domestic_policies.20.b: "Обеспечьте финансирование, чтобы две оставшиеся Айовы оставались в эксплуатации."
+ USA_events_domestic_policies.20.b1: "Обеспечьте финансирование, чтобы сохранить в эксплуатации последнюю оставшуюся Айову."
+ USA_events_domestic_policies.20.c: "Будь проклят Конгресс! Обеспечьте финансирование, чтобы вернуть все линкоры Айовы!"
+ USA_events_domestic_policies.20.d1: "Новый дом для линкоров Айовы"
+ USA_recomission_ships_TT: "§GКомиссии§! следующие §HЛинкоры§!:\n- §CРУС Нью-Джерси§!\n- §CРУГАТЬ Миссури§!\n§BПорт: Сан-Франциско§!"
+ USA_delete_iowa_class_TT: "Будет §RСписание§! §HКласс Айовы§!! Линкор"
+ USA_keep_iowa_class_TT: "Будем продолжать §HПоддерживать§! любой оставшийся §HIowa Class§! Линкор"
