--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -1988,7 +1988,7 @@
  ENG_infantry_weapons: "L1A1 SLR"
  ENG_infantry_weapons1: "L1A1 SLR SUIT"
  ENG_infantry_weapons2: "L85A1"
- ENG_infantry_weapons3: "L85A2 Early"
+ ENG_infantry_weapons3: "L85A2 Ранний"
  ENG_infantry_weapons4: "L85A2"
  ENG_infantry_weapons5: "L85A3"
  ENG_infantry_weapons6: "L403A1"
