--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -1976,7 +1976,7 @@
  ENG_infantry_weapons: "L1A1 SLR"
  ENG_infantry_weapons1: "L1A1 SLR SUIT"
  ENG_infantry_weapons2: "L85A1"
- ENG_infantry_weapons3: "L85A2 Early"
+ ENG_infantry_weapons3: "L85A2 早期型"
  ENG_infantry_weapons4: "L85A2"
  ENG_infantry_weapons5: "L85A3"
  ENG_infantry_weapons6: "L403A1"
@@ -2008,7 +2008,7 @@
  ENG_APC_8: "FV903 王"
  ENG_APC_8_short: "FV903 王"
  ENG_Heavy_Anti_tank_0: "FV102 打击者"
- ENG_Heavy_Anti_tank_1: "Land Rover Milan"
+ ENG_Heavy_Anti_tank_1: "路虎米兰"
  ENG_Heavy_Anti_tank_2: "突击队 V2"
  ENG_Heavy_Anti_tank_3: "突击队 V3"
  ENG_Heavy_Anti_tank_4: "突击队 V4"
@@ -2031,10 +2031,10 @@
  ENG_IFV_7: "FV910"
  ENG_IFV_7_short: "FV910"
  ENG_Anti_tank_0: "LAW80"
- ENG_Anti_tank_1: "Milan"
+ ENG_Anti_tank_1: "米兰"
  ENG_Anti_tank_2: "NLAW"
- ENG_Anti_tank_3: "NLAW Gen2"
- ENG_Anti_tank_4: "NLAW Gen3"
+ ENG_Anti_tank_3: "NLAW 二代"
+ ENG_Anti_tank_4: "NLAW 三代"
  ENG_MBT_1: "百夫长"
  ENG_MBT_1_short: "百夫长"
  ENG_MBT_1_desc: "当它首次问世时，百夫长的设计是开创早期主战坦克模型的革命性设计。百夫长战车是在第二次世界大战结束时设计和生产的，只在战后服役，但很快就成为西方对苏联T-54坦克的回应。在冷战期间的各种冲突中，百夫长都是可靠的、有效的和经过战斗证明的，如今世界上许多国家仍在使用它。"
@@ -2095,14 +2095,14 @@
  ENG_artillery_0: "1965型火炮"
  ENG_artillery_1: "L118 轻型野战炮"
  ENG_artillery_2: "M777 榴弹炮"
- ENG_util_vehicle_0: "Bedford MK"
- ENG_util_vehicle_1: "Land Rover 110 LWG GS"
- ENG_util_vehicle_2: "Land Rover WMIK Defender"
- ENG_util_vehicle_3: "Jackal"
- ENG_util_vehicle_4: "Mastiff"
- ENG_util_vehicle_5: "Foxhound"
- ENG_util_vehicle_6: "Foxhound Gen2"
- ENG_util_vehicle_7: "Land Rover 35 Protector"
+ ENG_util_vehicle_0: "贝德福德 MK"
+ ENG_util_vehicle_1: "路虎 110 LWG GS"
+ ENG_util_vehicle_2: "路虎 WMIK 保卫者"
+ ENG_util_vehicle_3: "豺"
+ ENG_util_vehicle_4: "獒犬"
+ ENG_util_vehicle_5: "猎狐犬"
+ ENG_util_vehicle_6: "猎狐犬 二代"
+ ENG_util_vehicle_7: "路虎 35 保卫者"
  ISR_infantry_weapons: "FN FAL"
  ISR_infantry_weapons1: "IMI 加利尔 AR"
  ISR_infantry_weapons2: "M16A2"
@@ -2822,14 +2822,14 @@
  PAK_SP_R_arty_0: "KRL 122"
  PAK_util_vehicle_0: "尼尚"
  PAK_util_vehicle_1: "亚松"
- PER_infantry_weapons: "Type 56"
- PER_infantry_weapons1: "Sayyad 5.56"
+ PER_infantry_weapons: "56式"
+ PER_infantry_weapons1: "赛耶德 5.56"
  PER_infantry_weapons2: "KL-7.62"
- PER_infantry_weapons3: "Fajr-224"
+ PER_infantry_weapons3: "法吉尔-224"
  PER_infantry_weapons4: "KH-2002"
- PER_infantry_weapons5: "Masaf 1"
- PER_infantry_weapons6: "Fajr-41"
- PER_infantry_weapons7: "Arash"
+ PER_infantry_weapons5: "马萨夫 1"
+ PER_infantry_weapons6: "法吉尔-41"
+ PER_infantry_weapons7: "阿拉什"
  PER_APC_1: "M113"
  PER_APC_2: "眼镜蛇 BMT-2"
  PER_APC_2_short: "眼镜蛇 BMT-2"
