--- a/localisation/french/MD_focus_USA_l_french.yml
+++ b/localisation/french/MD_focus_USA_l_french.yml
@@ -3154,3 +3154,18 @@
  USA_iraq_war_cost: "The Iraq War"
  USA_iraq_war_cost_desc: "The Iraq War has rocked with relative failure. Our efforts to continue the war will now cost us a considerable amount of money for some time, as we must scrap together money for the equipment and manpower required."
  USA_iraq_war_cost_TT: "§R$2.000§! §YBillion§! contributed weekly to the §YIraq War§!.\n"
+ USA_events_domestic_policies.20.title1: "The Last of the Behemoths"
+ USA_events_domestic_policies.20.title2: "The Last Behemoth"
+ USA_events_domestic_policies.20.title3: "Behemoths of the Past"
+ USA_events_domestic_policies.20.d: "The Iowa-class battleships have served us faithfully for nearly 60 years, from Okinawa and the Korean War to the Gulf War. However, with the fall of the USSR and the rising costs of keeping these ships in service, Congress is becoming more insistent on retiring the two last Iowas. Some veterans are already proposing to transform them into floating museums. While we could overrule Congress and secure funding to keep these two ships active, it would put us at odd with them. We could also go a step further by bringing New Jersey and Missouri back into service. But such a decision would no doubt provoke the ire of both Congress and Senate."
+ USA_events_domestic_policies.20.d2: "The remaining Iowa-class battleship has served us faithfully for nearly 60 years, from Okinawa and the Korean War to the Gulf War. However, with the fall of the USSR and the rising costs of keeping this ship in service, Congress is becoming more insistent on retiring the final Iowa ship. Some veterans are already proposing to transform it into a floating museum. While we could overrule Congress and secure funding to keep the ships active, it would put us at odd with them. We could also go a step further by bringing the New Jersey and Missouri back into service. But such a decision would no doubt provoke the ire of both Congress and Senate."
+ USA_events_domestic_policies.20.d3: "The Iowa battleships, which served faithfully for nearly 60 years—from Okinawa and the Korean War to the Gulf War—were decommissioned recently and turned into museum exhibits. However, these giants of the past have recently been attracting growing crowds, as more people visit the museums and learn about their storied history with awe."
+ USA_events_domestic_policies.20.a: "Retire the Iowas and transform them into museum ships"
+ USA_events_domestic_policies.20.a1: "Retire the final Iowa and transform it into a museum ship"
+ USA_events_domestic_policies.20.b: "Secure the funding to keep the two remaining Iowas in service"
+ USA_events_domestic_policies.20.b1: "Secure the funding to keep the last remaining Iowa in service"
+ USA_events_domestic_policies.20.c: "Congress be damned! Secure the funding to bring back all Iowas battleship!"
+ USA_events_domestic_policies.20.d1: "A new home for the Iowa battleships"
+ USA_recomission_ships_TT: "§GRecommissions§! the following §HBattleships§!:\n- §CUSS New Jersey§!\n- §CUSS Missouri§!\n§BPort: San Francisco§!"
+ USA_delete_iowa_class_TT: "Will §RDecommission§! any §HIowa Class§!! Battleship"
+ USA_keep_iowa_class_TT: "Will continue to §HMaintain§! any remaining §HIowa Class§! Battleship"
