Bug fixes for PER

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ v1.10.4
   - Fixed an issue with Iraq where the 'Uday Hussein' national spirit expired for no reason
   - Fixed an issue with Iran where the revolution goes undone if you click a certain decision betwee March 2001 and June 2001
   - Fixed an issue with Iran where the prime minister portraits were displayed incorrectly
+  - Fixed an issue with Iran where if you failed a debate, they wouldn't show up in the next one
   - Fixed the Hezbollah raids being able to be only done once
   - Fixed an unlocalized string in the Hezbollah raid
   - Fixed the ledger and some money tooltips missing the Migration Control total
@@ -27,16 +28,16 @@ v1.10.4
   - Added 20 or so events relating to Saddam Hussein's Alzheimer's (If you keep him around)
   - Added an event related to the Iowa battleships
   - UK stockpiles, variants, and OOB has been reworked
-  
+
  Graphics:
   - Map improved with community feedback
   - Major overhaul of Iranian and UK models
   - Added Swiss infantry
-  
+
  History:
   - Reworked Iran starting techs and removed 2G from its provinces in 2000
   - Added missing train tracks+supply hubs to the USA
-  
+
  Localization:
   - Fixed the misspelling of the "Norwegian Armed Forces" in the Norwegian tree
   - Fixed the misspelling of the "Reliance On Europe" opinion modifier
