--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -16,7 +16,7 @@ l_english:
  AST_CHI_test1: "Expand Chinese Trade"
  USA.AST_USA_trade_influence: "USA-Australian Diplomatic Influence"
  AST_Negotiate_USA_troop_support_dec: "Negotiate USA troop support"
- USA_trade_influnce_above_50: "§GRequires § §G50 § §GUSA§" 
+ USA_trade_influnce_above_50: "§GRequires § §G50 § §GUSA§"
  USA_trade_influnce_above_50_blocked: "§RRequires § §G50 § §GUSA§"
  USA_trade_influnce_above_50_tooltip: "§YRequires § §G50 § §GUSA § Trade Influence"
 
@@ -80,9 +80,9 @@ l_english:
  australia_md.16.o1: "The Australian nation mourns"
  australia_md.17.t: "Australia's New Infantry Fighting Vehicle"
  australia_md.17.d: ""
- australia_md.17.o1: "The Koreans make great machinery"
- australia_md.17.o2: "Sweden for the win"
- australia_md.17.o3: "How else would the British keep their empire?"
+ australia_md.17.o1: "Chinese equipment will have to do"
+ australia_md.17.o2: "The Koreans make great machinery"
+ australia_md.17.o3: "American ingenuity will guide our IFV's"
  australia_md.17.o4: "German engineering is the best"
  australia_md.24.t: "The Bali Bombings"
  australia_md.24.d1: "At 11pm on the Indonesian island of Bali, three bombs were detonated. Two explosions rattled the tourist nightlife hotspot on Kuta Beach and a third blast occurred in front of the American consulate nearby. Nearly half the deaths were Australians, making up 88 of the 202 fatalities. This will be remembered as the day that terror darkened the hearts of Australians."
@@ -555,7 +555,7 @@ l_english:
  AST_2_level_david_hurley_TT: "Will add §H2 Skill Levels§! to §HDavid Hurley§!"
  AST_2_level_shane_caughey_TT: "Will add §H2 Skill Levels§! to §HShane Caughey§!"
  AST_afghanistan_TT: "Our §Yboys§! are shipped off to [AFG.GetFlag]§GAfghanistan§!"
- AST_liberation_front_TT: "A great §Rterror§! must first shake our people before they will §Gapprove§! of our men embarking on §Ycrusades! of §Gjustice§@ across the §Yregion§!."
+ AST_liberation_front_TT: "A great §Rterror§! must first shake our people before they will §Gapprove§! of our men embarking on §Ycrusades§! of §Gjustice§@ across the §Yregion§!."
  AST_need_USA_support_TT: "In order to send our troops to [AFG.GetFlag] §GAfghanistan§!, the [USA.GetFlag] §3United States§! must first §Gapprove§! of this as they are the key voice of the §Yinternational community§!."
  AST_black_summer_bushfire_damage_effect_tt1: "§YThe Black Summer Bushfires§! have caused §Yvery serious damage§! to our country. The §Y[AST.Neutral_green_L_icon] [Neutral_green_L]§! ([?party_pop_array^17|Y2%]) will gain §Gsome support§! from the increased awareness of the effects of climate change."
  AST_black_summer_bushfire_damage_effect_tt2: "§YThe Black Summer Bushfires§! have caused §Yvery serious damage§! to our country. §R33§! of our citizens have §Rdied§!. The §Y[AST.Neutral_green_L_icon] [Neutral_green_L]§! ([?party_pop_array^17|Y2%]) will gain §Gsignificant support§! from the increased awareness of the effects of climate change and the implementation of policy that aligns with their platform."
@@ -566,6 +566,7 @@ l_english:
  helpyesIND: "Supports Indonesia in the Conflict"
  AST_test9: "TEST 9"
  AST_test9_desc: "We Should §G$IND_apologize_australia$§  §Hor § §G$IND_confront_australia$§  §Hvia§ §H Focus Tree §"
+ AST_land_8116_TT: "150 units of Korean K9 Thunder Self-Propelled Artillery vehicles will be added to the national stockpile."
 #Tech Boosts
  AST_anzac-class: "Anzac-Class Advancements"
 
