--- a/localisation/english/MD_focus_PER_l_english.yml
+++ b/localisation/english/MD_focus_PER_l_english.yml
@@ -4671,7 +4671,7 @@
  PER_revolution.15.a: "Another foe defeated.."
  PER_revolution.16.t: "Conscription centers over-run by volunteers"
  PER_revolution.16.d: "Following the Revolution in Iran, many ordinary citizens have been showing up to conscription centers en masse so that they can join our nations army, and fight back against the enemy!"
- PER_revolution.16.a: "Payande Iran!"
+ PER_revolution.16.a: "Payand-e Iran!"
 #Flavor
  PER_rev_flavor.1.t: "Ayatollah Khamenei Flees Iran!"
  PER_rev_flavor.1.d: "Out of fear of being captured by rebel forces, the Ayatollah Khamenei has fled Iran following the Iranian Civilwar, and is now seeking refuge in Venezuela where he has been offered a sanctuary. He is being blamed by several government bodies within Iran for the uprising, as they argue that he simply did not do enough to prevent it from happening in the first place. Iranian resistance leaders have called his escape cowardly, and are demanding that he be returned to Iran for a fair trial. The Guardian council has elected a government official they deem competant to deal with the uprising properly, but how he will do is anyones guess."
@@ -4899,7 +4899,7 @@
  PER_majlis_party_5: "\n\n[?ROOT.PER_majlis_seats^5|Y0]$PER_majlis_suffix$§Y[PER.anarchist_communism_L]§!"
  PER_majlis_party_6: "\n\n[?ROOT.PER_majlis_seats^6|Y0]$PER_majlis_suffix$§Y[PER.Conservative_L]§!"
  PER_majlis_party_7: "\n\n[?ROOT.PER_majlis_seats^7|Y0]$PER_majlis_suffix$§Y[PER.Autocracy_L]§!"
- PER_majlis_party_8: "\n\n[?ROOT.PER_majlis_seats^8|Y0]$PER_majlis_suffix$§Y[PER.Mod_Vilayat_e_Faqih_L]§! (Moderates)"
+ PER_majlis_party_8: "[?ROOT.PER_majlis_seats^8|Y0]$PER_majlis_suffix$§Y[PER.Mod_Vilayat_e_Faqih_L]§! (Moderates)"
  PER_majlis_party_9: "\n\n[?ROOT.PER_majlis_seats^9|Y0]$PER_majlis_suffix$§Y[PER.Vilayat_e_Faqih_L]§! (Hardliners)"
  PER_majlis_party_10: "\n\n[?ROOT.PER_majlis_seats^10|Y0]$PER_majlis_suffix$§Y[PER.Kingdom_L]§!"
  PER_majlis_party_11: "\n\n[?ROOT.PER_majlis_seats^11|Y0]$PER_majlis_suffix$§Y[PER.Caliphate_L]§!"
