--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,8 @@ v1.10.4
   - Added "Net Migration Rate" value factor to low corruption and higher corruption lowers the net migration rate
   - Made license slightly harder to get to prevent the USA accepting to share F-22/B-2 license at game start
   - Made it so tht Hezbollah can no longer access the international weapons market (AAT)
+  - Adjusted land doctrine buffs, reducing all night attack and speed buffs
+  - Increased cost of land doctrine combat doctrines from 35 to 40 for pacing
 
  Bugfix:
   - Fixed an issue with Iraq where the 'Uday Hussein' national spirit expired for no reason
@@ -21,6 +23,7 @@ v1.10.4
   - Removed the duplicate initialization of city images causing a slowdown in the beginning of the game
   - Fixed the Generic Tree "Neutrality" focus allowing you to go to isolation if you have the military internal faction
   - Fixed the duplicate intelligence agency for COL
+  - Fixed Suicide Drone Costs
 
  Content:
   - Added "Overlord Subsidies" Diplomatic Action
