--- a/localisation/braz_por/MD_mio_l_braz_por.yml
+++ b/localisation/braz_por/MD_mio_l_braz_por.yml
@@ -233,7 +233,7 @@
  generic_mio_sub_trait_ind_xp: "Foco em Recursos e Desenvolvimento"
  generic_mio_sub_trait_ind_buffs: "Experiência Industrial"
  generic_mio_sub_trait_ind_capacity: "Capacidade Expandida"
- generic_mio_sub_trait_ind_cost: "Comunicação Bureau-Doca"
+ generic_mio_sub_trait_ind_cost: "Comunicação entre Bureaus e Docas"
  generic_mio_sub_trait_ind_research_2: "Gestão Otimizada"
  generic_mio_sub_trait_ind_capacity_2: "Alta Produção de Volume"
  generic_mio_sub_trait_sub_resource: "Materiais Modernos"
@@ -261,7 +261,7 @@
  generic_mio_nav_light_trait_light_armor: "Armadura Composta Moderna"
  generic_mio_nav_light_trait_strength: "Controle de Incêndio Adaptável"
  generic_mio_nav_light_trait_light_detection_2: "Tecnologias Modernas de Radar"
- generic_mio_nav_light_trait_ind_cost: "Comunicação de Bureu para Estaleiro"
+ generic_mio_nav_light_trait_ind_cost: "Comunicação entre Bureaus e Docas"
  generic_mio_nav_light_trait_ind_research_2: "Gestão Otimizada"
  generic_mio_nav_light_light_trait_ind_capacity_2: "Produção em Alta Volume"
  generic_mio_nav_light_trait_heavy_cost: "Produção de Navios Pesados"
