--- a/localisation/simp_chinese/MD_frontend_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_frontend_l_simp_chinese.yml
@@ -80,7 +80,7 @@
  custom_diff_weak_bot: "@BOT 削弱博茨瓦纳"
  custom_diff_weak_lic: "@LIC 削弱列支敦士登"
  VERSION_MD: "千禧黎明：现代之日 v1.10.4"
- VERSION_MD_DATE: "发布日期：2024，8月9日 0:30 协调世界时/格林尼治标准时间\n8月8日, 8:30 PM 北美东部时间"
+ VERSION_MD_DATE: "发布日期：2024，8月16日 0:30 协调世界时/格林尼治标准时间\n8月15日, 20:30 北美东部时间"
  MENU_MD_WIKI: "在Gitlab Wiki上阅读一些关于MD的有用信息！"
  MENU_STEAMWORKSHOP: "给我们留下steam评分"
  MENU_DISCORD: "寻找其他玩家并在Discord上与开发人员交谈"
