--- a/localisation/braz_por/MD_focus_UKR_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_UKR_l_braz_por.yml
@@ -592,15 +592,15 @@
  UKR_decrease_education_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_medical_open: "Start the §RHealthcare§! Debate"
  UKR_medical_close: "End the §RHealthcare§! Debate"
- UKR_increase_health: "Request More Funding for Healthcare"
+ UKR_increase_health: "Solicite mais financiamento para cuidados de saúde"
  UKR_increase_health_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_decrease_health: "Request Less Funding for Healthcare"
  UKR_decrease_health_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_pension_open: "Start the §nPension§! Debate"
  UKR_pension_close: "End the §nPension§! Debate"
- UKR_increase_pension: "Request More Pension Spending"
+ UKR_increase_pension: "Solicite mais gastos com pensões"
  UKR_increase_pension_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
- UKR_decrease_pension: "Request Less Pension Spending"
+ UKR_decrease_pension: "Solicite menos gastos com pensões"
  UKR_decrease_pension_desc: "If the debate in the Verkhovna Rada is §Gsuccessful§!, the law will be §Ychanged§!"
  UKR_promote_russian_interests: "Promote [SOV.GetFlag] Russian Interests"
  UKR_promote_russian_interests_desc: "We will promote [SOV.GetFlag] Russian Interests within the nation to boost the popularity of the Pro-Russian Bloc in the next election."
@@ -647,34 +647,34 @@
  UKR_party_regions_request_russian_desc: "Solicitaremos investimentos russos, obviamente não serão supérfluos."
  UKR_party_regions_personal_gain: "Concentre-se no ganho pessoal"
  UKR_party_regions_personal_gain_desc: "O país com certeza é bom, mas vale a pena pensar em você"
- UKR_party_regions_titushki: "Rally Out The Titushki"
- UKR_party_regions_titushki_desc: "We will use a new method of discrediting opposition rallies - Titushki."
- UKR_party_regions_regional_council: "Regional Council"
- UKR_party_regions_regional_council_desc: "We will introduce a new authority, the regional council, to facilitate the interaction of regional and state authorities"
- UKR_party_regions_optimise_east_ukraine_gamble: "Eastern Ukraine Gamble"
- UKR_party_regions_optimise_east_ukraine_gamble_desc: "Eastern Ukraine has always been our patrimony, we will actively try to get their support, because in fact they are our main electorate"
- UKR_party_regions_optimise_prior_loyals: "Prioritize the Loyals"
- UKR_party_regions_optimise_prior_loyals_desc: "People loyal to us are much more important and we will actively promote them"
- UKR_party_regions_western_oligarch: "Approach Western Oligarchs"
- UKR_party_regions_western_oligarch_desc: "The oligarchs of western Ukraine will be our priority, we want to find a balance between the west and the east, perhaps their oligarchs will help us"
- UKR_party_regions_meet_akhmetov: "Meet With Akhmetov"
- UKR_party_regions_meet_akhmetov_desc: "The Donetsk clan of oligarchs, and its representative Rinat Akhmetov, an important political resource that we use to maintain our power, it is worth listening to him"
- UKR_party_regions_informational_act: "Information Act"
- UKR_party_regions_informational_act_desc: "The new act, or law, will open access to the broad masses to the activities of politicians, which will reduce the corruption component in their activities"
- UKR_party_regions_optimise_ministries: "Optimize The Ministries"
- UKR_party_regions_optimise_ministries_desc: "Government structures have become too huge, it's time to reduce them"
- UKR_party_regions_reform_constituion: "Reforming the Constitution"
- UKR_party_regions_reform_constituion_desc: "We will actively promote the reform of the constitution, it's time for our country to move towards global changes!"
- UKR_party_regions_compulsory: "The Change Of Compulsory Military Service"
- UKR_party_regions_compulsory_desc: "We will change the system of service in our army, literally turning it into a contract one"
- UKR_party_regions_pension_reform: "Pension Reform"
- UKR_party_regions_pension_reform_desc: "Pension reform has been brewing for a long time and now we will carry it out"
- UKR_party_regions_kozhara: "Kozhara is MID Leader"
- UKR_party_regions_kozhara_desc: "We will appoint one of our friends and partners as Foreign Minister"
- UKR_party_regions_youth_region: "Expand Youth Regions"
- UKR_party_regions_youth_region_desc: "The youth wing of our party will gain more power and influence, we will open access to them"
- UKR_party_regions_berkut_reforms: "Berkut Reforms"
- UKR_party_regions_berkut_reforms_desc: "Berkut, as a police structure, needs reforms so that we can protect ourselves"
+ UKR_party_regions_titushki: "Reúna o Titushki"
+ UKR_party_regions_titushki_desc: "Usaremos um novo método para desacreditar as manifestações da oposição - Titushki."
+ UKR_party_regions_regional_council: "Conselho Regional"
+ UKR_party_regions_regional_council_desc: "Introduziremos uma nova autoridade, o conselho regional, para facilitar a interação das autoridades regionais e estaduais"
+ UKR_party_regions_optimise_east_ukraine_gamble: "Pari sur l’Est de l’Ukraine"
+ UKR_party_regions_optimise_east_ukraine_gamble_desc: "O Leste da Ucrânia sempre foi o nosso património, tentaremos activamente obter o seu apoio, porque na verdade eles são o nosso principal eleitorado"
+ UKR_party_regions_optimise_prior_loyals: "Priorize os Leais"
+ UKR_party_regions_optimise_prior_loyals_desc: "As pessoas leais a nós são muito mais importantes e iremos promovê-las ativamente"
+ UKR_party_regions_western_oligarch: "Aproxime-se dos oligarcas ocidentais"
+ UKR_party_regions_western_oligarch_desc: "Os oligarcas do oeste da Ucrânia serão a nossa prioridade, queremos encontrar um equilíbrio entre o oeste e o leste, talvez os seus oligarcas nos ajudem"
+ UKR_party_regions_meet_akhmetov: "Encontre-se com Akhmetov"
+ UKR_party_regions_meet_akhmetov_desc: "O clã de oligarcas de Donetsk e seu representante Rinat Akhmetov, um importante recurso político que utilizamos para manter nosso poder, vale a pena ouvi-lo"
+ UKR_party_regions_informational_act: "Lei da Informação"
+ UKR_party_regions_informational_act_desc: "A nova lei, ou lei, abrirá o acesso das grandes massas às atividades dos políticos, o que reduzirá a componente de corrupção nas suas atividades"
+ UKR_party_regions_optimise_ministries: "Otimize os Ministérios"
+ UKR_party_regions_optimise_ministries_desc: "As estruturas governamentais tornaram-se demasiado grandes, é hora de reduzi-las"
+ UKR_party_regions_reform_constituion: "Reformando a Constituição"
+ UKR_party_regions_reform_constituion_desc: "Promoveremos ativamente a reforma da constituição, é hora do nosso país avançar em direção às mudanças globais!"
+ UKR_party_regions_compulsory: "A mudança do serviço militar obrigatório"
+ UKR_party_regions_compulsory_desc: "Vamos mudar o sistema de serviço em nosso exército, literalmente transformando-o em contrato"
+ UKR_party_regions_pension_reform: "Reforma da Previdência"
+ UKR_party_regions_pension_reform_desc: "A reforma previdenciária está fermentando há muito tempo e agora vamos realizá-la"
+ UKR_party_regions_kozhara: "Kozhara é líder MID"
+ UKR_party_regions_kozhara_desc: "Nomearemos um dos nossos amigos e parceiros como Ministro dos Negócios Estrangeiros"
+ UKR_party_regions_youth_region: "Expandir as regiões juvenis"
+ UKR_party_regions_youth_region_desc: "A ala jovem do nosso partido ganhará mais poder e influência, abriremos o acesso a eles"
+ UKR_party_regions_berkut_reforms: "Reformas de Berkut"
+ UKR_party_regions_berkut_reforms_desc: "Berkut, como estrutura policial, precisa de reformas para que possamos nos proteger"
  UKR_party_regions_berkut_extreme_training: "Extreme Training For Berkut"
  UKR_party_regions_berkut_extreme_training_desc: "Berkut will become even more active in conducting competitions and training processes to improve its skill"
  UKR_dual_language: "Two-Language State"
@@ -701,8 +701,8 @@
  UKR_parti_regions_opposition_agree: "Cooperation With The Opposition"
  UKR_parti_regions_titushki: "Titushki"
  UKR_parti_regions_optimise_ministers: "Optimization of Ministries"
- UKR_parti_regions_inform_act: "Information Act"
- UKR_parti_regions_pension_reform: "Pension Reform"
+ UKR_parti_regions_inform_act: "Lei da Informação"
+ UKR_parti_regions_pension_reform: "Reforma da Previdência"
  UKR_parti_regions_youth_regions: "Youth Regions"
  UKR_parti_regions_autocracy: "Yanukovych's Autocracy"
  UKR_parti_regions_autocracy_desc: "Yanukovych's actions have become widely called a real autocracy, but is it important for the good of the state?"
