--- a/localisation/polish/MD_focus_PER_l_polish.yml
+++ b/localisation/polish/MD_focus_PER_l_polish.yml
@@ -4341,7 +4341,7 @@
  PER_revolution.15.a: "Kolejny wróg pokonany.."
  PER_revolution.16.t: "Centra poboru przepełnione przez wolontariuszy"
  PER_revolution.16.d: "Po rewolucji w Iranie wielu zwykłych obywateli masowo pojawiało się w centrach poboru, aby mogli dołączyć do armii naszego narodu i walczyć z wrogiem!"
- PER_revolution.16.a: "Payande Iran!"
+ PER_revolution.16.a: "Payand-e Iran!"
  PER_majlis.1.t: "Wyniki wyborów dla Majlesów"
  PER_majlis.1.d: "Na początku tego tygodnia w całym kraju otwarto kabiny do głosowania, aby obywatele [PER.GetFlag] Iranu mogli wybrać swoich przedstawicieli. Wielu z niecierpliwością czeka na programy nowych polityków, którzy dopiero się aklimatyzują, podczas gdy z drugiej strony obecni przedstawiciele walczą o utrzymanie swoich wpływów w Zgromadzeniu Doradczym."
  PER_majlis.1.a: "Ludzie przemówili"
@@ -5207,31 +5207,31 @@
  PER_new_majlis: "Majlesowie"
  PER_new_majlis_desc: "[PER.GetFlag] §HMajles§! jest parlamentem naszego kraju i to on dyktuje, jakie prawa wchodzą i wychodzą, co oznacza, że ​​często mogą być sprzeczne z naszymi własnymi potrzebami. Ludzie będą głosować na przedstawicieli w [PER.GetFlag] §HMajles§! w każdym cyklu wyborczym, a mandaty będą przydzielane partiom zalegalizowanym na podstawie ich popularności. Miejsca, które w przeciwnym razie przypadłyby zakazanym partiom, zostaną zdobyte przez §Hindependents§! który będzie realizował nieznany plan.\n\nCo kilka miesięcy [PER.GetFlag] §HMajles§! zorganizuje §Hdebatę§!, podczas której w zamian za korzyści będziemy mogli obiecać konkretne reformy partiom mającym reprezentację. Jeśli złożymy obietnicę, ale jej nie dotrzymamy, poniesiemy konsekwencje. W dowolnym momencie [PER.GetFlag] §HMajles§! może sprzeciwić się wprowadzonym zmianom w prawie, żądając, abyśmy cofnęli tę zmianę.\n\n[PER_majlis_0][PER_majlis_1][PER_majlis_2][PER_majlis_3][PER_majlis_4][PER_majlis_5][PER_majlis_6][PER_majlis_7][PER_majlis_8][PER_majlis_9][PER_majlis_10][PER_majlis_11][PER_majlis_12][PER_majlis_13][PER_majlis_14][PER_majlis_15][PER_majlis_16][PER_majlis_17][PER_majlis_18][PER_majlis_19][PER_majlis_20][PER_majlis_21][PER_majlis_22][PER_majlis_23][PER_majlis_24][PER_majlis_25][PER_majlis_26][PER_majlis_27][PER_majlis_28][PER_majlis_29][PER_majlis_30][PER_majlis_31][PER_majlis_32][PER_majlis_33][PER_majlis_IND_MP]\n\nCałkowita liczba miejsc w Majles - [?ROOT.PER_majlis_total_seats|Y0]\nNastępne wybory: [?ROOT.PER_election_var|Y0] Month(s)\nNastępna debata: [?ROOT.PER_session_var|Y0] Month(s)"
  PER_majlis_suffix: "Miejsce(a) zajmowane przez"
- PER_majlis_party_0: "[?ROOT.PER_majlis_seats^0|Y0]$PER_majlis_suffix$§Y[PER.Western_Autocracy_L]§!\n\n"
- PER_majlis_party_1: "[?ROOT.PER_majlis_seats^1|Y0]$PER_majlis_suffix$§Y[PER.conservatism_L]§!\n\n"
- PER_majlis_party_2: "[?ROOT.PER_majlis_seats^2|Y0]$PER_majlis_suffix$§Y[PER.liberalism_L]§!\n\n"
- PER_majlis_party_3: "[?ROOT.PER_majlis_seats^3|Y0]$PER_majlis_suffix$§Y[PER.socialism_L]§!\n\n"
- PER_majlis_party_4: "[?ROOT.PER_majlis_seats^4|Y0]$PER_majlis_suffix$§Y[PER.Communist-State_L]§!\n\n"
- PER_majlis_party_5: "[?ROOT.PER_majlis_seats^5|Y0]$PER_majlis_suffix$§Y[PER.anarchist_communism_L]§!\n\n"
- PER_majlis_party_6: "[?ROOT.PER_majlis_seats^6|Y0]$PER_majlis_suffix$§Y[PER.Conservative_L]§!\n\n"
- PER_majlis_party_7: "[?ROOT.PER_majlis_seats^7|Y0]$PER_majlis_suffix$§Y[PER.Autocracy_L]§!\n\n"
- PER_majlis_party_8: "[?ROOT.PER_majlis_seats^8|Y0]$PER_majlis_suffix$§Y[PER.Mod_Vilayat_e_Faqih_L]§! (Umiarkowane)\n\n"
- PER_majlis_party_9: "[?ROOT.PER_majlis_seats^9|Y0]$PER_majlis_suffix$§Y[PER.Vilayat_e_Faqih_L]§! (Twardogłowi)\n\n"
- PER_majlis_party_10: "[?ROOT.PER_majlis_seats^10|Y0]$PER_majlis_suffix$§Y[PER.Kingdom_L]§!\n\n"
- PER_majlis_party_11: "[?ROOT.PER_majlis_seats^11|Y0]$PER_majlis_suffix$§Y[PER.Caliphate_L]§!\n\n"
- PER_majlis_party_12: "[?ROOT.PER_majlis_seats^12|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Muslim_Brotherhood_L]§!\n\n"
- PER_majlis_party_13: "[?ROOT.PER_majlis_seats^13|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Autocracy_L]§!\n\n"
- PER_majlis_party_14: "[?ROOT.PER_majlis_seats^14|Y0]$PER_majlis_suffix$§Y[PER.Neutral_conservatism_L]§!\n\n"
- PER_majlis_party_15: "[?ROOT.PER_majlis_seats^15|Y0]$PER_majlis_suffix$§Y[PER.oligarchism_L]§!\n\n"
- PER_majlis_party_16: "[?ROOT.PER_majlis_seats^16|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Libertarian_L]§!\n\n"
- PER_majlis_party_17: "[?ROOT.PER_majlis_seats^17|Y0]$PER_majlis_suffix$§Y[PER.Neutral_green_L]§!\n\n"
- PER_majlis_party_18: "[?ROOT.PER_majlis_seats^18|Y0]$PER_majlis_suffix$§Y[PER.neutral_Social_L]§!\n\n"
- PER_majlis_party_19: "[?ROOT.PER_majlis_seats^19|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Communism_L]§!\n\n"
- PER_majlis_party_20: "[?ROOT.PER_majlis_seats^20|Y0]$PER_majlis_suffix$§Y[PER.Nat_Populism_L]§!\n\n"
- PER_majlis_party_21: "[?ROOT.PER_majlis_seats^21|Y0]$PER_majlis_suffix$§Y[PER.Nat_Fascism_L]§!\n\n"
- PER_majlis_party_22: "[?ROOT.PER_majlis_seats^22|Y0]$PER_majlis_suffix$ Przedstawiciele §Y[PER.Nat_Autocracy_L]§!\n\n"
- PER_majlis_party_23: "[?ROOT.PER_majlis_seats^23|Y0]$PER_majlis_suffix$ Przedstawiciele £PER_monarchism §YPawiego Tronu§!\n\n"
- PER_majlis_party_IND: "[?ROOT.PER_majlis_seats_INDEPENDENT|Y0]$PER_majlis_suffix$§YNiezależni§!"
+ PER_majlis_party_0: "[?ROOT.PER_majlis_seats^0|Y0]$PER_majlis_suffix$§Y[PER.Western_Autocracy_L]§!"
+ PER_majlis_party_1: "\n\n[?ROOT.PER_majlis_seats^1|Y0]$PER_majlis_suffix$§Y[PER.conservatism_L]§!"
+ PER_majlis_party_2: "\n\n[?ROOT.PER_majlis_seats^2|Y0]$PER_majlis_suffix$§Y[PER.liberalism_L]§!"
+ PER_majlis_party_3: "\n\n[?ROOT.PER_majlis_seats^3|Y0]$PER_majlis_suffix$§Y[PER.socialism_L]§!"
+ PER_majlis_party_4: "\n\n[?ROOT.PER_majlis_seats^4|Y0]$PER_majlis_suffix$§Y[PER.Communist-State_L]§!"
+ PER_majlis_party_5: "\n\n[?ROOT.PER_majlis_seats^5|Y0]$PER_majlis_suffix$§Y[PER.anarchist_communism_L]§!"
+ PER_majlis_party_6: "\n\n[?ROOT.PER_majlis_seats^6|Y0]$PER_majlis_suffix$§Y[PER.Conservative_L]§!"
+ PER_majlis_party_7: "\n\n[?ROOT.PER_majlis_seats^7|Y0]$PER_majlis_suffix$§Y[PER.Autocracy_L]§!"
+ PER_majlis_party_8: "[?ROOT.PER_majlis_seats^8|Y0]$PER_majlis_suffix$§Y[PER.Mod_Vilayat_e_Faqih_L]§! (Umiarkowane)"
+ PER_majlis_party_9: "\n\n[?ROOT.PER_majlis_seats^9|Y0]$PER_majlis_suffix$§Y[PER.Vilayat_e_Faqih_L]§! (Twardogłowi)"
+ PER_majlis_party_10: "\n\n[?ROOT.PER_majlis_seats^10|Y0]$PER_majlis_suffix$§Y[PER.Kingdom_L]§!"
+ PER_majlis_party_11: "\n\n[?ROOT.PER_majlis_seats^11|Y0]$PER_majlis_suffix$§Y[PER.Caliphate_L]§!"
+ PER_majlis_party_12: "\n\n[?ROOT.PER_majlis_seats^12|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Muslim_Brotherhood_L]§!"
+ PER_majlis_party_13: "\n\n[?ROOT.PER_majlis_seats^13|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Autocracy_L]§!"
+ PER_majlis_party_14: "\n\n[?ROOT.PER_majlis_seats^14|Y0]$PER_majlis_suffix$§Y[PER.Neutral_conservatism_L]§!"
+ PER_majlis_party_15: "\n\n[?ROOT.PER_majlis_seats^15|Y0]$PER_majlis_suffix$§Y[PER.oligarchism_L]§!"
+ PER_majlis_party_16: "\n\n[?ROOT.PER_majlis_seats^16|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Libertarian_L]§!"
+ PER_majlis_party_17: "\n\n[?ROOT.PER_majlis_seats^17|Y0]$PER_majlis_suffix$§Y[PER.Neutral_green_L]§!"
+ PER_majlis_party_18: "\n\n[?ROOT.PER_majlis_seats^18|Y0]$PER_majlis_suffix$§Y[PER.neutral_Social_L]§!"
+ PER_majlis_party_19: "\n\n[?ROOT.PER_majlis_seats^19|Y0]$PER_majlis_suffix$§Y[PER.Neutral_Communism_L]§!"
+ PER_majlis_party_20: "\n\n[?ROOT.PER_majlis_seats^20|Y0]$PER_majlis_suffix$§Y[PER.Nat_Populism_L]§!"
+ PER_majlis_party_21: "\n\n[?ROOT.PER_majlis_seats^21|Y0]$PER_majlis_suffix$§Y[PER.Nat_Fascism_L]§!"
+ PER_majlis_party_22: "\n\n[?ROOT.PER_majlis_seats^22|Y0]$PER_majlis_suffix$ Przedstawiciele §Y[PER.Nat_Autocracy_L]§!"
+ PER_majlis_party_23: "\n\n[?ROOT.PER_majlis_seats^23|Y0]$PER_majlis_suffix$ Przedstawiciele £PER_monarchism §YPawiego Tronu§!"
+ PER_majlis_party_IND: "\n\n[?ROOT.PER_majlis_seats_INDEPENDENT|Y0]$PER_majlis_suffix$§YNiezależni§!"
  PER_move_to_baharestan: "Przenieść Majlesów do Baharestanu"
  PER_move_to_baharestan_desc: "Nasz rząd był ostatnio dość zmienny w kwestii lokalizacji budynku Majles i najwyższy czas, abyśmy zdecydowali się na coś lepszego i tego się trzymali, aby zwiększyć efektywność zgromadzenia."
  PER_dissolve_the_parliament: "Rozpuść Majlesa"
