--- a/localisation/polish/factions_l_polish.yml
+++ b/localisation/polish/factions_l_polish.yml
@@ -1,9 +1,9 @@
 ﻿l_polish:
  NATO: "NATO"
  NATO_member: "Członek NATO"
- NATO_member_desc: "Organizacja Traktatu Północnoatlantyckiego (NATO) to sojusz obronny złożony z USA, Kanady i kilku krajów europejskich. Zaczynając jako zwykły sojusz polityczny, NATO szybko przekształciło się w antyradziecki sojusz wojskowy. Po rozpadzie Związku Radzieckiego NATO przyjęło coraz bardziej interwencyjną rolę na świecie. Jednak głównym celem sojuszu w dalszym ciągu jest obrona swoich krajów członkowskich, a atak na jedno państwo członkowskie jest atakiem na wszystkie."
- NATO_member_tooltip: "§RSpecjalne zasady frakcji§!:\n- Tylko Lider Frakcji może zagwarantować innym krajom\n- Kraje można wzywać tylko do wojen obronnych\n- Wejście i wyjście z frakcji jest kontrolowane przez decyzje/wydarzenia"
- NATO_guarantee_rule_tt: "§RTylko Lider Frakcji NATO może zagwarantować innym krajom!§!"
+ NATO_member_desc: "Organizacja Traktatu Północnoatlantyckiego (NATO) to sojusz obronny złożony z USA, Kanady i kilku krajów europejskich. Zaczynając jako zwykły sojusz polityczny, NATO szybko przekształciło się w antyradziecki sojusz wojskowy. Po rozpadzie Związku Radzieckiego NATO zaczęło przyjmować coraz bardziej interwencyjną rolę na świecie. Jednak głównym celem sojuszu w dalszym ciągu jest obrona swoich krajów członkowskich, a atak na jedno państwo członkowskie jest atakiem na wszystkie."
+ NATO_member_tooltip: "§RSpecjalne zasady frakcji§!:\n- Tylko Lider Frakcji może gwarantować inne kraje\n- Kraje można wzywać tylko do wojen obronnych\n- Wejście i wyjście z frakcji jest kontrolowane przez decyzje/wydarzenia"
+ NATO_guarantee_rule_tt: "§RTylko Lider Frakcji NATO może gwarantować inne kraje!§!"
  NATO_call_ally_rule_tt: "§RCzłonkowie NATO mogą wzywać sojuszników jedynie w wojnach obronnych!§!"
  NATO_join_ally_rule_tt: "§RCzłonkowie NATO mogą przyłączać się do sojuszników jedynie w wojnach obronnych!§!"
  NATO_join_faction_rule_tt: "§RKraje nie mogą przystąpić do NATO w zwykły sposób!§!"
@@ -17,16 +17,16 @@
  faction_resistance_axis_member_TT: "§RSpecjalna zasada frakcji§!:\n- Do frakcji mogą należeć tylko kraje szyickie"
  resistance_axis_join_faction_rule_tt: "§RTylko kraje szyickie mogą dołączyć do Osi Oporu§!"
  resistance_axis_offer_join_faction_rule_tt: "§RTylko kraje szyickie mogą dołączyć do Osi Oporu§!"
- CSTO: "CSTO"
- CSTO_member: "Członek CSTO"
+ CSTO: "OUBZ"
+ CSTO_member: "Członek OUBZ"
  CSTO_member_desc: "Organizacja Układu o Bezpieczeństwie Zbiorowym jest obronnym sojuszem wojskowym złożonym z państw poradzieckich. Organizacja powstała po upadku Związku Radzieckiego i utworzeniu Wspólnoty Niepodległych Państw, gdy kraje próbowały zachować jedność narodów poradzieckich. Ostatecznie przekształcił się w odrębny sojusz wojskowy."
  CSTO_member_tooltip: "§RSpecjalne zasady frakcji§!:\n- Do frakcji mogą należeć tylko kraje, które kiedyś były częścią Związku Radzieckiego\n- Kraje można wzywać jedynie do wojen obronnych"
  CSTO_call_ally_rule_tt: "§RCzłonkowie OUBZ mogą wzywać sojuszników jedynie w wojnach obronnych!§!"
- CSTO_join_ally_rule_tt: "§RCzłonkowie CSTO mogą przyłączać się do sojuszników tylko w wojnach obronnych!§!"
+ CSTO_join_ally_rule_tt: "§RCzłonkowie OUBZ mogą przyłączać się do sojuszników tylko w wojnach obronnych!§!"
  CSTO_join_faction_rule_tt: "§RDo OUBZ mogą przystąpić wyłącznie kraje poradzieckie!§!"
  CSTO_offer_join_faction_rule_tt: "§RDo OUBZ można zapraszać wyłącznie kraje poradzieckie!§!"
- UKR_baltic_black_sea_union_faction: "Unia Bałtycko-Morze Czarne"
- faction_baltic_black_sea_union_member: "Unia Bałtycko-Morze Czarne"
+ UKR_baltic_black_sea_union_faction: "Unia Bałtycko-Czarnomorska"
+ faction_baltic_black_sea_union_member: "Unia Bałtycko-Czarnomorska"
  faction_baltic_black_sea_union_member_desc: "Unia Bałtycko-Czarnomorska jest następcą Międzymorza. Wraz z grupą narodów sprzymierzonych od Morza Bałtyckiego po Morze Czarne będą pełnić rolę bufora między Wschodem a Zachodem."
  faction_baltic_black_sea_union_member_TT: "§RSpecjalne zasady frakcji§!:\n- Tylko kraje, którym początkowo zaproponowano Unię, są dozwolone we frakcji\n- Kraje mogą być wzywane tylko do wojen obronnych"
  faction_baltic_black_sea_union_member_call_ally_rule_tt: "§RCzłonkowie Unii Bałtycko-Czarnomorskiej mogą szukać sojuszników jedynie w wojnach obronnych!§!"
@@ -42,7 +42,7 @@
  PENINSULA_SHIELD: "Rada Współpracy Zatoki Perskiej"
  idea_gcc_member_state: "Członek Rady Współpracy Zatoki Perskiej"
  idea_gcc_member_state_desc: "GCC jest unią polityczną i gospodarczą wszystkich monarchii arabskich w Zatoce Perskiej."
- idea_gcc_member_state_TT: "§RSpecjalne zasady frakcji§!:\n- Po ukończeniu §Y Solidnego sojuszu§! do frakcji mogą wchodzić tylko kraje należące do GCC"
+ idea_gcc_member_state_TT: "§RSpecjalne zasady frakcji§!:\n- Po ukończeniu §YSolidnego sojuszu§! do frakcji mogą wchodzić tylko kraje należące do GCC"
  gcc_member_state_join_faction_rule_tt: "§RDo frakcji Rady Współpracy Zatoki Perskiej mogą dołączyć tylko członkowie Rady Współpracy Zatoki Perskiej!§!"
  gcc_member_state_offer_join_faction_rule_tt: "§RTylko członkowie Rady Współpracy Zatoki Perskiej mogą dołączyć do frakcji Rady Współpracy Zatoki Perskiej!§!"
  british_commonwealth: "Wspólnota"
@@ -63,7 +63,7 @@
  faction_cento_alliance: "Członek CENTO"
  faction_cento_alliance_desc: "CENTO, znana również jako Organizacja Traktatu Centralnego, to sojusz wojskowy niedawno odnowiony w celu ochrony wartości świeckich i demokratycznych na Bliskim Wschodzie. Choć sojusz nie był zbyt skuteczny w czasie zimnej wojny, jego członkowie obiecali to zmienić i wprowadzić więcej zmian w regionie."
  faction_cento_TT: "§RSpecjalne zasady frakcji§!:\n- Tylko niektóre kraje z Bliskiego Wschodu i Azji Środkowej mogą należeć do frakcji\n- Kraje można wzywać tylko do wojen obronnych"
- faction_cento_alliance_call_ally_rule_tt: "§R Członkowie CENTO Alliance mogą wzywać sojuszników tylko w wojnach obronnych!§!"
+ faction_cento_alliance_call_ally_rule_tt: "§R Członkowie Sojuszu CENTO mogą wzywać sojuszników tylko w wojnach obronnych!§!"
  faction_cento_alliance_join_ally_rule_tt: "§R Członkowie CENTO mogą przyłączać się do sojuszników jedynie w wojnach obronnych!§!"
  faction_cento_alliance_join_faction_rule_tt: "§RTylko niektóre kraje Bliskiego Wschodu i Azji Środkowej mogą dołączyć do CENTO!§!"
  faction_cento_alliance_offer_join_faction_rule_tt: "§RTylko niektóre kraje Bliskiego Wschodu i Azji Środkowej mogą dołączyć do CENTO!§!"
@@ -74,7 +74,7 @@
  faction_imperial_bloc_join_faction_rule_tt: "§RTylko niektóre kraje w Europie mogą dołączyć do Bloku Imperialnego!§!"
  faction_imperial_bloc_alliance_join_faction_rule_tt: "§RTylko niektóre kraje w Europie mogą przystąpić do Bloku Imperialnego!§!"
  faction_imperial_bloc_alliance_offer_join_faction_rule_tt: "§RTylko niektóre kraje w Europie mogą przystąpić do Bloku Imperialnego!§!"
- brics_alliance: "cegły"
+ brics_alliance: "BRICS"
  faction_brics_alliance: "Członek BRICS"
  faction_brics_alliance_desc: "BRICS to zbiór kilku krajów obejmujących kilka regionów. Choć początkowo pakt miał mieć bardziej ekonomiczny charakter, jego członkowie zdecydowali, że najlepiej będzie dla nich zawrzeć pakt obronny w celu rywalizacji z sojuszami takimi jak NATO."
  faction_brics_TT: "§RSpecjalne zasady frakcji§!:\n- Do frakcji dopuszczony jest każdy, kto zostanie zatwierdzony przez głównych członków.\n- Kraje można wzywać tylko do wojen obronnych"
@@ -82,11 +82,11 @@
  faction_brics_alliance_join_ally_rule_tt: "§R Członkowie BRICS mogą przyłączać się do sojuszników jedynie w wojnach obronnych!§!"
  faction_brics_alliance_join_faction_rule_tt: "§RTylko kraje posiadające zgodę mogą dołączyć do BRICS!§!"
  faction_brics_alliance_offer_join_faction_rule_tt: "§RTylko kraje posiadające zgodę mogą dołączyć do BRICS!§!"
- mto_alliance: "Średni cel budżetowy"
+ mto_alliance: "MTO"
  faction_mto_alliance: "Członek MTO"
  faction_mto_alliance_desc: "Kraj ten jest członkiem MTO (Organizacja Traktatu Śródziemnomorskiego), która uczestniczy we wzajemnej obronie innych narodów islamskich objętych MTO. MTO uczestniczy także w różnych projektach gospodarczych na Bliskim Wschodzie i w pobliskich obszarach, których głównym celem jest poprawa dobrobytu ekonomicznego muzułmanów"
  faction_mto_TT: "§RSpecjalne zasady frakcji§!:\n- Do frakcji mogą należeć tylko niektóre kraje z Bliskiego Wschodu i Afryki Północnej\n- Kraje można wzywać jedynie do wojen obronnych"
- faction_mto_alliance_call_ally_rule_tt: "§R Członkowie MTO Alliance mogą wzywać sojuszników jedynie w wojnach obronnych!§!"
+ faction_mto_alliance_call_ally_rule_tt: "§R Członkowie MTO mogą wzywać sojuszników jedynie w wojnach obronnych!§!"
  faction_mto_alliance_join_ally_rule_tt: "§R Członkowie MTO mogą przyłączać się do sojuszników jedynie w wojnach obronnych!§!"
  faction_mto_alliance_join_faction_rule_tt: "§RTylko niektóre kraje na Bliskim Wschodzie i w Afryce Północnej mogą przystąpić do MTO!§!"
  faction_mto_alliance_offer_join_faction_rule_tt: "§RDo MTO mogą przystąpić tylko niektóre kraje Bliskiego Wschodu i Afryki Północnej!§!"
