--- a/localisation/russian/MD_frontend_l_russian.yml
+++ b/localisation/russian/MD_frontend_l_russian.yml
@@ -102,7 +102,7 @@
  custom_diff_weak_che: "@CHE Ослабить Чечню"
  custom_diff_weak_bsh: "@BSH Ослабить Башкортостан"
  VERSION_MD: "Millennium Dawn: A Modern Day v1.10.4"
- VERSION_MD_DATE: "Дата выхода: 9 августа 2024, 3:30 МСК"
+ VERSION_MD_DATE: "Дата выхода: 16 августа 2024 г., 0:30 UTC/GMT\n15 августа, 20:30 по восточному стандартному времени"
  MENU_MD_WIKI: "Найдите полезную информацию о Millennium Dawn: A Modern Day на Gitlab Wiki!"
  MENU_STEAMWORKSHOP: "Оставьте свой рейтинг моду на странице в Steam Workshop!"
  MENU_DISCORD: "Найдите других игроков и пообщайтесь с разработчиками в Discord"
