--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -4323,130 +4323,130 @@
  VICTORY_POINTS_715: "Фитчбург"
  VICTORY_POINTS_14054: "Наррагансетт"
  VICTORY_POINTS_859: "Лонг-Айленд"
- VICTORY_POINTS_3894: "Washingtonville"
- VICTORY_POINTS_706: "Forestburgh"
- VICTORY_POINTS_16104: "Harrisburg"
- VICTORY_POINTS_6848: "Fredericksburg"
- VICTORY_POINTS_4627: "Welch"
- VICTORY_POINTS_9825: "Cleveland"
- VICTORY_POINTS_15763: "Toledo"
- VICTORY_POINTS_659: "Mansfield"
- VICTORY_POINTS_15760: "Lima"
- VICTORY_POINTS_11890: "West Union"
- VICTORY_POINTS_9760: "Chillicothe"
- VICTORY_POINTS_7528: "Chauncey"
- VICTORY_POINTS_15794: "Indianapolis"
- VICTORY_POINTS_15746: "Lafayette"
- VICTORY_POINTS_15745: "Bloomington"
- VICTORY_POINTS_9653: "Muncie"
- VICTORY_POINTS_11621: "Santa Claus"
- VICTORY_POINTS_1881: "Crothersville"
- VICTORY_POINTS_11685: "Grand Rapids"
- VICTORY_POINTS_15703: "Lansing"
- VICTORY_POINTS_695: "Kalamazoo"
- VICTORY_POINTS_15702: "Ann Arbor"
- VICTORY_POINTS_15720: "Escanaba"
- VICTORY_POINTS_9746: "Bad Axe"
- VICTORY_POINTS_5205: "Stirlingville"
- VICTORY_POINTS_15734: "Bloomington"
- VICTORY_POINTS_15796: "Decatur"
- VICTORY_POINTS_15728: "Carrier Mills"
- VICTORY_POINTS_12368: "Oglesby"
- VICTORY_POINTS_9450: "Waukegan"
- VICTORY_POINTS_15740: "Naperville"
- VICTORY_POINTS_15741: "Chicago Heights"
- VICTORY_POINTS_1560: "Madison"
- VICTORY_POINTS_15685: "Green Bay"
- VICTORY_POINTS_10526: "Eau Claire"
- VICTORY_POINTS_15687: "Wausau"
- VICTORY_POINTS_15682: "Reedsburg"
- VICTORY_POINTS_15696: "Solon Springs"
- VICTORY_POINTS_1760: "Tomah"
- VICTORY_POINTS_15688: "Clintonville"
- VICTORY_POINTS_15681: "Dodgeville"
- VICTORY_POINTS_15602: "St. Cloud"
- VICTORY_POINTS_7536: "Mankato"
- VICTORY_POINTS_15610: "Bemidji"
- VICTORY_POINTS_15601: "Milaca"
- VICTORY_POINTS_15615: "Finlayson"
- VICTORY_POINTS_15611: "Park Rapids"
- VICTORY_POINTS_1866: "New Ulm"
- VICTORY_POINTS_15555: "Jefferson City"
- VICTORY_POINTS_1564: "Kansas City"
- VICTORY_POINTS_15557: "Columbia"
- VICTORY_POINTS_15546: "Cape Girardeau"
- VICTORY_POINTS_15560: "Kirksville"
- VICTORY_POINTS_15632: "Piedmont"
- VICTORY_POINTS_12463: "Cabool"
- VICTORY_POINTS_1441: "Lake Ozark"
- VICTORY_POINTS_15544: "Butler"
- VICTORY_POINTS_1621: "Rolla"
- VICTORY_POINTS_15572: "Des Moines"
- VICTORY_POINTS_15576: "Sioux City"
- VICTORY_POINTS_15587: "Cedar Rapids"
- VICTORY_POINTS_15584: "Davenport"
- VICTORY_POINTS_15573: "Ames"
- VICTORY_POINTS_15570: "Clarinda"
- VICTORY_POINTS_1831: "Decorah"
- VICTORY_POINTS_1678: "Oskaloosa"
- VICTORY_POINTS_4691: "Emmetsburg"
- VICTORY_POINTS_11788: "Sheldon"
- VICTORY_POINTS_15780: "Louisville"
- VICTORY_POINTS_15777: "Williamstown"
- VICTORY_POINTS_15784: "Bowling Green"
- VICTORY_POINTS_15790: "Ashland"
- VICTORY_POINTS_15776: "Prestonsburg"
- VICTORY_POINTS_9727: "Lexington"
- VICTORY_POINTS_16028: "Charlotte"
- VICTORY_POINTS_16023: "Raleigh"
- VICTORY_POINTS_16031: "Winston-Salem"
- VICTORY_POINTS_16030: "Fayetteville"
- VICTORY_POINTS_16015: "Wilmington"
- VICTORY_POINTS_16041: "Asheville"
- VICTORY_POINTS_16022: "Rocky Mount"
- VICTORY_POINTS_16033: "Mt Airy"
- VICTORY_POINTS_16043: "Ahoskie"
- VICTORY_POINTS_16006: "Columbia"
- VICTORY_POINTS_16012: "Travelers Rest"
- VICTORY_POINTS_7134: "Mullins"
- VICTORY_POINTS_16007: "Lake City"
- VICTORY_POINTS_15995: "Walterboro"
- VICTORY_POINTS_3994: "Aiken"
- VICTORY_POINTS_15975: "Macon"
- VICTORY_POINTS_15959: "Kingsland"
- VICTORY_POINTS_15961: "Fargo"
- VICTORY_POINTS_15963: "Valdosta"
- VICTORY_POINTS_638: "Athens"
- VICTORY_POINTS_15985: "Buford"
- VICTORY_POINTS_12325: "Bainbridge"
- VICTORY_POINTS_15965: "Tifton"
- VICTORY_POINTS_15980: "McDonough"
- VICTORY_POINTS_15930: "Tampa"
- VICTORY_POINTS_15929: "Palmetto"
- VICTORY_POINTS_15928: "Placid Lakes"
- VICTORY_POINTS_15938: "Defuniak Springs"
- VICTORY_POINTS_15934: "Bonita Springs"
- VICTORY_POINTS_15952: "Blountstown"
- VICTORY_POINTS_15944: "Ocala"
- VICTORY_POINTS_15937: "Panama City"
- VICTORY_POINTS_15949: "Ponce De Leon"
- VICTORY_POINTS_15957: "Gainsville"
- VICTORY_POINTS_15918: "Birmingham"
- VICTORY_POINTS_15907: "Montgomery"
- VICTORY_POINTS_15915: "Decatur"
- VICTORY_POINTS_4622: "Tuscaloosa"
- VICTORY_POINTS_15912: "Gadsden"
- VICTORY_POINTS_15896: "New Brockton"
- VICTORY_POINTS_11942: "Andalusia"
- VICTORY_POINTS_15893: "Atmore"
- VICTORY_POINTS_10520: "Fairhope"
- VICTORY_POINTS_15906: "Selma"
- VICTORY_POINTS_15908: "Clanton"
- VICTORY_POINTS_15875: "Jackson"
- VICTORY_POINTS_15863: "Gulfport"
- VICTORY_POINTS_15870: "Hattiesburg"
- VICTORY_POINTS_15889: "Holly Springs"
- VICTORY_POINTS_15883: "Starkville"
+ VICTORY_POINTS_3894: "Вашингтонвилл"
+ VICTORY_POINTS_706: "Форестбург"
+ VICTORY_POINTS_16104: "Гаррисберг"
+ VICTORY_POINTS_6848: "Фредериксбург"
+ VICTORY_POINTS_4627: "Уэлч"
+ VICTORY_POINTS_9825: "Кливленд"
+ VICTORY_POINTS_15763: "Толедо"
+ VICTORY_POINTS_659: "Мэнсфилд"
+ VICTORY_POINTS_15760: "Лима"
+ VICTORY_POINTS_11890: "Вест Юнион"
+ VICTORY_POINTS_9760: "Чилликоте"
+ VICTORY_POINTS_7528: "Чонси"
+ VICTORY_POINTS_15794: "Индианаполис"
+ VICTORY_POINTS_15746: "Лафайетт"
+ VICTORY_POINTS_15745: "Блумингтон"
+ VICTORY_POINTS_9653: "Манси"
+ VICTORY_POINTS_11621: "Санта Клаус"
+ VICTORY_POINTS_1881: "Кротерсвилл"
+ VICTORY_POINTS_11685: "Гранд-Рапидс"
+ VICTORY_POINTS_15703: "Лансинг"
+ VICTORY_POINTS_695: "Каламазу"
+ VICTORY_POINTS_15702: "Анн-Арбор"
+ VICTORY_POINTS_15720: "Эсканаба"
+ VICTORY_POINTS_9746: "Плохой топор"
+ VICTORY_POINTS_5205: "Стерлингвилл"
+ VICTORY_POINTS_15734: "Блумингтон"
+ VICTORY_POINTS_15796: "Декейтер"
+ VICTORY_POINTS_15728: "Кэрриер Миллс"
+ VICTORY_POINTS_12368: "Оглсби"
+ VICTORY_POINTS_9450: "Уокиган"
+ VICTORY_POINTS_15740: "Нейпервилл"
+ VICTORY_POINTS_15741: "Чикаго Хайтс"
+ VICTORY_POINTS_1560: "Мэдисон"
+ VICTORY_POINTS_15685: "Грин Бэй"
+ VICTORY_POINTS_10526: "О Клэр"
+ VICTORY_POINTS_15687: "Ваусау"
+ VICTORY_POINTS_15682: "Ридсбург"
+ VICTORY_POINTS_15696: "Солон Спрингс"
+ VICTORY_POINTS_1760: "Тома"
+ VICTORY_POINTS_15688: "Клинтонвилл"
+ VICTORY_POINTS_15681: "Доджвилл"
+ VICTORY_POINTS_15602: "Сен-Клауд"
+ VICTORY_POINTS_7536: "Манкато"
+ VICTORY_POINTS_15610: "Бемиджи"
+ VICTORY_POINTS_15601: "Милача"
+ VICTORY_POINTS_15615: "Финлейсон"
+ VICTORY_POINTS_15611: "Парк Рэпидс"
+ VICTORY_POINTS_1866: "Нью-Ульм"
+ VICTORY_POINTS_15555: "Джефферсон Сити"
+ VICTORY_POINTS_1564: "Канзас-Сити"
+ VICTORY_POINTS_15557: "Колумбия"
+ VICTORY_POINTS_15546: "Мыс Жирардо"
+ VICTORY_POINTS_15560: "Кирксвилл"
+ VICTORY_POINTS_15632: "Пьемонт"
+ VICTORY_POINTS_12463: "Кабул"
+ VICTORY_POINTS_1441: "Озеро Озарк"
+ VICTORY_POINTS_15544: "Батлер"
+ VICTORY_POINTS_1621: "Ролла"
+ VICTORY_POINTS_15572: "Де-Мойн"
+ VICTORY_POINTS_15576: "Су-Сити"
+ VICTORY_POINTS_15587: "Сидар-Рапидс"
+ VICTORY_POINTS_15584: "Давенпорт"
+ VICTORY_POINTS_15573: "Эймс"
+ VICTORY_POINTS_15570: "Кларинда"
+ VICTORY_POINTS_1831: "Декора"
+ VICTORY_POINTS_1678: "Оскалуса"
+ VICTORY_POINTS_4691: "Эмметсбург"
+ VICTORY_POINTS_11788: "Шелдон"
+ VICTORY_POINTS_15780: "Луисвилл"
+ VICTORY_POINTS_15777: "Уильямстаун"
+ VICTORY_POINTS_15784: "Боулинг Грин"
+ VICTORY_POINTS_15790: "Эшленд"
+ VICTORY_POINTS_15776: "Престонсбург"
+ VICTORY_POINTS_9727: "Лексингтон"
+ VICTORY_POINTS_16028: "Шарлотта"
+ VICTORY_POINTS_16023: "Роли"
+ VICTORY_POINTS_16031: "Уинстон-Сейлем"
+ VICTORY_POINTS_16030: "Фейетвилл"
+ VICTORY_POINTS_16015: "Уилмингтон"
+ VICTORY_POINTS_16041: "Эшвилл"
+ VICTORY_POINTS_16022: "Роки Маунт"
+ VICTORY_POINTS_16033: "Гора Эйри"
+ VICTORY_POINTS_16043: "Ахоски"
+ VICTORY_POINTS_16006: "Колумбия"
+ VICTORY_POINTS_16012: "Отдых путешественников"
+ VICTORY_POINTS_7134: "Маллинз"
+ VICTORY_POINTS_16007: "Лейк-Сити"
+ VICTORY_POINTS_15995: "Уолтерборо"
+ VICTORY_POINTS_3994: "Эйкен"
+ VICTORY_POINTS_15975: "Мейкон"
+ VICTORY_POINTS_15959: "Кингсленд"
+ VICTORY_POINTS_15961: "Фарго"
+ VICTORY_POINTS_15963: "Валдоста"
+ VICTORY_POINTS_638: "Афины"
+ VICTORY_POINTS_15985: "Буфорд"
+ VICTORY_POINTS_12325: "Бейнбридж"
+ VICTORY_POINTS_15965: "Тифтон"
+ VICTORY_POINTS_15980: "Макдонаф"
+ VICTORY_POINTS_15930: "Тампа"
+ VICTORY_POINTS_15929: "Пальметто"
+ VICTORY_POINTS_15928: "Плэсид Лейкс"
+ VICTORY_POINTS_15938: "Дефуньяк Спрингс"
+ VICTORY_POINTS_15934: "Бонита Спрингс"
+ VICTORY_POINTS_15952: "Блаунтстаун"
+ VICTORY_POINTS_15944: "Окала"
+ VICTORY_POINTS_15937: "Панама-Сити"
+ VICTORY_POINTS_15949: "Понсе Де Леон"
+ VICTORY_POINTS_15957: "Гейнсвилл"
+ VICTORY_POINTS_15918: "Бирмингем"
+ VICTORY_POINTS_15907: "Монтгомери"
+ VICTORY_POINTS_15915: "Декейтер"
+ VICTORY_POINTS_4622: "Тускалуса"
+ VICTORY_POINTS_15912: "Гадсден"
+ VICTORY_POINTS_15896: "Нью-Броктон"
+ VICTORY_POINTS_11942: "Андалусия"
+ VICTORY_POINTS_15893: "Атмор"
+ VICTORY_POINTS_10520: "Фэрхоуп"
+ VICTORY_POINTS_15906: "Сельма"
+ VICTORY_POINTS_15908: "Клэнтон"
+ VICTORY_POINTS_15875: "Джексон"
+ VICTORY_POINTS_15863: "Галфпорт"
+ VICTORY_POINTS_15870: "Хаттисберг"
+ VICTORY_POINTS_15889: "Холли Спрингс"
+ VICTORY_POINTS_15883: "Старквилл"
  VICTORY_POINTS_15885: "Booneville"
  VICTORY_POINTS_15880: "Rolling Fork"
  VICTORY_POINTS_15865: "Parchman"
@@ -4478,7 +4478,7 @@
  VICTORY_POINTS_15516: "Amite City"
  VICTORY_POINTS_15514: "Jean Lafitte"
  VICTORY_POINTS_15526: "Leesville"
- VICTORY_POINTS_15633: "Fayetteville"
+ VICTORY_POINTS_15633: "Фейетвилл"
  VICTORY_POINTS_15536: "Conway"
  VICTORY_POINTS_15531: "Monticello"
  VICTORY_POINTS_15543: "Carlisle"
@@ -4557,7 +4557,7 @@
  VICTORY_POINTS_14970: "Philip"
  VICTORY_POINTS_7771: "White River"
  VICTORY_POINTS_14982: "Bismarck"
- VICTORY_POINTS_14987: "Fargo"
+ VICTORY_POINTS_14987: "Фарго"
  VICTORY_POINTS_14988: "Dickinson"
  VICTORY_POINTS_14983: "Jamestown"
  VICTORY_POINTS_1870: "Cavalier"
